# prism-engines

./: .gitignore  CLEANUP_AUDIT_REPORT.md  FOLDER_STRUCTURE.md  Financial_Data_Fetch.ipynb  PRISM.ipynb  PRISM_14lens.ipynb  PRISM_QuickStart.ipynb  PRISM_REFACTOR_REPORT_v1.md  PRISM_Temporal_Analysis_Report.md  QUICKSTART.md  QUICK_REFERENCE (2).txt  README (1).md  README.md  TEST_SCRIPTS_README.md  View your SQL helper  computer    mnt user-data o.txt  __init__ (1).py  app.py  check_capabilities.py  climate_data_fetcher.py  clustering_lens.py  coherence (1).py  consolidate (1).py  fetcher.py  fetcher_yahoo_fixed.py  index.html  launch_prism.bat  launch_prism.sh  lens_inspector.py  loader.py  main.py  output_config.py  prism_run.py  prism_suite.py  pyproject.toml  report.py  requirements-app.txt  requirements.txt  run (1).py  sample_climate_data.csv  setup_prism_env.sh  (+9 more)
.backup_20251206_163000/: fetcher.py  fetcher_fred.py  fetcher_yahoo.py
Start/: PRISM_Temporal_Analysis.ipynb  fetcher.py  temporal_runner.py
analysis/: __init__.py  benchmark_report.py  cointegration.py  hidden_variation_detector.py  multiple_testing.py  null_models.py  power_analysis.py  sensitivity.py  stationarity.py  surrogates.py  uncertainty.py  zip_benchmarks.py
benchmarks/: __init__.py  engine_correctness.py  engine_performance.py  ml_seismometer_benchmarks.py  overnight_benchmarks.py  report_builder.py  run_benchmarks.py  synthetic_scenarios.py
cladue_sandbox/: demo.py  test_all_phases.py  test_integration.py  test_phase1.py  test_phase2_panels.py  test_phase3_cli.py  test_phase4_html.py  (+1 more)
(+651 files in other folders)
